# Motorcin-

./: .gitignore  CMakeLists.txt  README.md  build_turbo.bat  vcpkg.json
Assets/Shaders/: tri_uniform.fs.txt  tri_vcolor.fs.txt  tri_vcolor.vs.txt
Motorcin/: CMakeLists.txt  CMakeUserPresets.json  vcpkg.json
Motorcin/src/: Main.cpp
Motorcin/src/core/: Window.cpp
src/: Main.cpp
src/core/: Application.cpp  Application.h  Camera.cpp  Camera.h  Input.cpp  Input.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Time.cpp  Time.h  Window.cpp  Window.h
